# GRUZ

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
.opencode/plugins/: architecture-guard.ts
app/: .prettierrc  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.app.json  vite.config.ts
app/src/: App.svelte  app.css
app/src-tauri/: .clippy.toml  Cargo.toml  rustfmt.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs
app/src-tauri/src/commands/: channel_prefs.rs  download.rs  history.rs  mod.rs  queue.rs  session.rs  settings.rs  shortcuts.rs  support.rs  update.rs
app/src-tauri/src/db/: channel_prefs.rs  history.rs  mod.rs  session.rs  settings.rs  tasks.rs
app/src-tauri/src/db/migrations/: 0001_initial.sql  0003_tasks.sql  0004_channel_prefs.sql  0005_quality_profiles.sql  0006_source_stats.sql  0007_session.sql
app/src-tauri/src/downloader/: mod.rs  pipeline.rs  process.rs  spec.rs
app/src-tauri/src/orchestrator/: events.rs  mod.rs
app/src-tauri/src/queue/: mod.rs  task.rs
app/src-tauri/src/ytdlp/: mod.rs
app/src/lib/bridge/: commands.ts  events.ts  types.ts
app/src/lib/components/channels/: ChannelsPage.svelte
app/src/lib/components/debug/: DebugPage.svelte
app/src/lib/components/download/: DownloadPage.svelte
app/src/lib/components/editor/: EditorPage.svelte
app/src/lib/design/: theme.css  tokens.ts
app/src/lib/gallery/: albums.svelte.ts  aspectStore.svelte.ts  hero.ts  selection.svelte.ts
app/src/lib/stores/: confirm.svelte.ts  crash.svelte.ts  delete.svelte.ts  download.svelte.ts  queue.svelte.ts  settings.svelte.ts  thought.svelte.ts  toast.svelte.ts  tooltip.svelte.ts
app/src/lib/utils/: changelog.ts  format.ts  fuzzy.ts  lazyImage.ts  media.svelte.ts  tooltip.ts  url.ts
docs/rules/: COMMITS.md
installer/: index.html  package-lock.json  package.json  vite.config.ts
installer/src/: App.svelte
installer/src-tauri/: Cargo.toml  build.rs  gruz-installer.exe.manifest  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/icons/: icon.icns
installer/src-tauri/src/: commands.rs  lib.rs  main.rs
(+24 files in other folders)
