[package]
name = "gruz-installer"
version = "0.0.1"
edition = "2021"

[lib]
name = "gruz_installer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
winreg = "0.55"
mslnk = "0.1"
sha2 = "0.10"
url = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
tauri-plugin-dialog = "2.7.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
